# cogmood_analysis

./: .gitignore  .gitmodules  README.md  pyproject.toml
notebooks/: exclusion_criteria.ipynb  exclusion_criteria_pilot.ipynb  flkr_results.ipynb  load_and_clean_survey.ipynb  run_flkr_hpc.ipynb  running_subs.ipynb  task_survey_correlations.ipynb
src/cogmood_analysis/: __init__.py  load.py  log.py  nonparam.py  survey_helpers.py
src/cogmood_analysis/tests/: test_load.py  test_nonparam.py  test_surveyhelpers.py
src/cogmood_analysis/tests/oneblock_test/: log_bart_0.slog  log_cab_0.slog  log_flkr_0.slog  log_rdm_0.slog
src/cogmood_analysis/tests/test_data/: bart.parquet  boxcox.npy  cab.parquet  flkr.parquet  parsed_survey1.parquet  rdm.parquet
