[project]
name = "cogmood-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Dylan Nielson", email = "adenosine@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "arviz>=0.22.0",
    "black>=25.1.0",
    "joblib>=1.5.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.5",
    "numpy>=2.2.6",
    "polars>=1.32.2",
    "pyarrow>=21.0.0",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
]

[project.optional-dependencies]
test = [
    "pytest>=8.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = ["packages/SupremePilot"]
